--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -13,11 +13,12 @@ categories:
 comments: false
 ---
 
-*Registration for this workshop is now closed*. If you missed it, but
-would like to attend a future workshop please reach out to
-[Eliot](bios/community/aaaeliot.qmd) or
-[Ceres](bios/community/aaaeliot.qmd) so that we can add you to wait
-list.
+*Registration for this workshop is now closed*.
+
+If you missed it, but would like to attend a future workshop, please
+reach out to [Eliot](../bios/community/aaaeliot.qmd) or
+[Ceres](../bios/community/aaaeliot.qmd) so that we can add you to the
+wait list.
 
 ## Date: June 11 - 13, 2024
 
@@ -27,89 +28,98 @@ Meeting link will be e-mailed to all workshop participants.
 
 ## Agenda
 
-"WOYO", Work On Your Own + health breaks – in each session you will have
-time to work through the examples and take breaks. The last 15min of
-each WOYO will be with "open video and chat" to ask questions and
-discuss as a group.
+"WOYO", Work On Your Own + health breaks
+
+In each session you will have time to work through the examples and take
+breaks. The last 15min of each WOYO will be with "open video and chat"
+to ask questions and discuss as a group.
 
 All times in Pacific Daylight Time (GMT-7)
 
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| **DAY 1**                                                | **SpaDES foundations**                                                                                         |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 8:30 - 9:20                                              | Introduction                                                                                                   |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-|                                                          | Workshop logistics                                                                                             |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-|                                                          | What is SpaDES and why use it?                                                                                 |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 9:30 - 10:00                                             | Introduction to SpaDES modules                                                                                 |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 10:00 - 11:00                                            | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 11:00 - 11:30                                            | Module files and metadata                                                                                      |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-|                                                          | Module inputs                                                                                                  |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 11:30 - 12:30                                            | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 12:30 - 1:30                                             | LUNCH BREAK                                                                                                    |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 1:30 - 2:00                                              | The `simList`                                                                                                  |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 2:00 - 3:00                                              | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 3:00 - 3:30                                              | Modules & events                                                                                               |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-|                                                          | Event scheduling                                                                                               |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 3:30 - free ending\                                      | WOYO                                                                                                           |
-| or\                                                      |                                                                                                                |
-| next morning for earlier time zones                      |                                                                                                                |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| **DAY 2**                                                | **Continuous workflows with simple examples**                                                                  |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 8:30 - 9:00                                              | Revisit previous WOYO and Day 1                                                                                |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 9:00 - 9:30                                              | Continuous workflows                                                                                           |
-|                                                          |                                                                                                                |
-|                                                          | Caching                                                                                                        |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 9:30 - 10:30                                             | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 10:30 - 11:00                                            | `prepInputs()`                                                                                                 |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 11:00 - 12:00                                            | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 12:00 - 1:00                                             | LUNCH BREAK                                                                                                    |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 1:00 - 1:30                                              | SpaDES workflows and projects with `setupProject`                                                              |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 1:30 - 2:30                                              | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 2:30 - 3:00                                              | Simple workflow for an ecological example                                                                      |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 3:00 - free ending\                                      | WOYO                                                                                                           |
-| or\                                                      |                                                                                                                |
-| next morning for earlier time zones                      |                                                                                                                |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| **DAY 3**                                                | **Using continuous workflows with real challenges**                                                            |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 8:30 - 9:00                                              | Revisit previous WOYO and Day 2                                                                                |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 9:00 - 9:30                                              | Flexibility comes at a cost, But it's worth it!                                                                |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 9:30 - 10:00                                             | Forest landscape modelling - parameterisation                                                                  |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 10:00 - 11:00                                            | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 11:00 - 11:30                                            | Forest landscape modelling - replication, validation, model selection                                          |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 11:30 - 12:30                                            | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 12:30 - 1:30                                             | LUNCH BREAK                                                                                                    |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 1:30 - 2:00                                              | Forests and wildfire                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
-| 2:00 - 3:00                                              | WOYO                                                                                                           |
-+----------------------------------------------------------+----------------------------------------------------------------------------------------------------------------+
++-----------------------------+----------------------------------------------+
+| **DAY 1**                   | **SpaDES foundations**                       |
++-----------------------------+----------------------------------------------+
+| 8:30 - 9:20                 | Introduction                                 |
++-----------------------------+----------------------------------------------+
+|                             | Workshop logistics                           |
++-----------------------------+----------------------------------------------+
+|                             | What is SpaDES and why use it?               |
++-----------------------------+----------------------------------------------+
+| 9:30 - 10:00                | Introduction to SpaDES modules               |
++-----------------------------+----------------------------------------------+
+| 10:00 - 11:00               | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 11:00 - 11:30               | Module files and metadata                    |
++-----------------------------+----------------------------------------------+
+|                             | Module inputs                                |
++-----------------------------+----------------------------------------------+
+| 11:30 - 12:30               | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 12:30 - 1:30                | LUNCH BREAK                                  |
++-----------------------------+----------------------------------------------+
+| 1:30 - 2:00                 | The `simList`                                |
++-----------------------------+----------------------------------------------+
+| 2:00 - 3:00                 | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 3:00 - 3:30                 | Modules & events                             |
++-----------------------------+----------------------------------------------+
+|                             | Event scheduling                             |
++-----------------------------+----------------------------------------------+
+| 3:30 - free ending\         | WOYO                                         |
+| or\                         |                                              |
+| next morning for earlier    |                                              |
+| time zones                  |                                              |
++-----------------------------+----------------------------------------------+
+| **DAY 2**                   | **Continuous workflows with simple           |
+|                             | examples**                                   |
++-----------------------------+----------------------------------------------+
+| 8:30 - 9:00                 | Revisit previous WOYO and Day 1              |
++-----------------------------+----------------------------------------------+
+| 9:00 - 9:30                 | Continuous workflows                         |
+|                             |                                              |
+|                             | Caching                                      |
++-----------------------------+----------------------------------------------+
+| 9:30 - 10:30                | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 10:30 - 11:00               | `prepInputs()`                               |
++-----------------------------+----------------------------------------------+
+| 11:00 - 12:00               | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 12:00 - 1:00                | LUNCH BREAK                                  |
++-----------------------------+----------------------------------------------+
+| 1:00 - 1:30                 | SpaDES workflows and projects with           |
+|                             | `setupProject`                               |
++-----------------------------+----------------------------------------------+
+| 1:30 - 2:30                 | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 2:30 - 3:00                 | Simple workflow for an ecological example    |
++-----------------------------+----------------------------------------------+
+| 3:00 - free ending\         | WOYO                                         |
+| or\                         |                                              |
+| next morning for earlier    |                                              |
+| time zones                  |                                              |
++-----------------------------+----------------------------------------------+
+| **DAY 3**                   | **Using continuous workflows with real       |
+|                             | challenges**                                 |
++-----------------------------+----------------------------------------------+
+| 8:30 - 9:00                 | Revisit previous WOYO and Day 2              |
++-----------------------------+----------------------------------------------+
+| 9:00 - 9:30                 | Flexibility comes at a cost, But it's worth  |
+|                             | it!                                          |
++-----------------------------+----------------------------------------------+
+| 9:30 - 10:00                | Forest landscape modelling -                 |
+|                             | parameterisation                             |
++-----------------------------+----------------------------------------------+
+| 10:00 - 11:00               | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 11:00 - 11:30               | Forest landscape modelling - replication,    |
+|                             | validation, model selection                  |
++-----------------------------+----------------------------------------------+
+| 11:30 - 12:30               | WOYO                                         |
++-----------------------------+----------------------------------------------+
+| 12:30 - 1:30                | LUNCH BREAK                                  |
++-----------------------------+----------------------------------------------+
+| 1:30 - 2:00                 | Forests and wildfire                         |
++-----------------------------+----------------------------------------------+
+| 2:00 - 3:00                 | WOYO                                         |
++-----------------------------+----------------------------------------------+
