fix date for older post that was touched now

--- a/posts/2024-05-07-SpaDES Workshop Confirmation.qmd
+++ b/posts/2024-05-07-SpaDES Workshop Confirmation.qmd
@@ -1,7 +1,7 @@
 ---
 title: "SpaDES Workshop confirmation"
 author: "Eliot McIntire"
-date: last-modified
+date: "May 8 2024"
 categories:
   - Workshop
 comments: false
