--- a/training/index.qmd
+++ b/training/index.qmd
@@ -17,14 +17,20 @@ for many applications outside the realm of ecological sciences. We
 certainly don't expect NASA scientists to overhaul their own workflows
 and follow ours -- but feel free too and send us your feedback!
 
-Still, we hope that many ecologists and those in related sciences (e.g.
-forestry, wildlife management, etc.), academics or practitioners, can
-appreciate the value of transforming their work into R^3^T, nimble
-workflows and find these solution useful. Mostly we hope that ecological
-modellers can embrace these tools to work towards expanding the
-ecological modelling community and the reusability and testing of the
-models it produces.
+The scope, therefore, of this book is limited to the many ways that
+data, and an understanding of those data achieved through models, can be
+used for decision making, reproducibility of publications that come from
+the work, etc. By working towards a set of standards for our data and
+modeling workflows, our science can become more nimble. We can thus
+pivot and update as issues come up.
 
+We hope that many ecologists and those in related sciences (e.g.
+forestry, wildlife management, etc.), academics or practitioners, can
+appreciate the value of transforming their work into R^3^T, PERFICT, and
+nimble workflows and find these solution useful. Mostly we hope that
+those that work with ecosystems can embrace these tools to work
+towards expanding the abilities of the community 
+to become robust to any scrutiny we face.
 
 # Acknowledgements {.unnumbered}
 
