--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -42,6 +42,19 @@ a function in called
 Please see @sec-moduleintro for how to create a simple module before
 attempting this section.
 
+::: {.callout-tip}
+## Repeated? When?
+
+When starting to build a module or an event, we ask 2 key questions:
+
+**1. Do I need to repeat this?**
+
+**2. If yes, how often and/or when?**
+
+Once we answer these, we can use the function `scheduleEvents` to set them up
+in whatever sequence we want.
+:::
+
 Scheduling events allows us to control when things happen in a sequence.
 This can be as simple as "this module will just do one thing" to "this
 module will do several things, some of which repeat".
@@ -219,8 +232,23 @@ match what we wrote in the `scheduleEvent` above). In this event, we
 "do" the prediction, then we schedule the next prediction at "time plus
 1"
 
-See
-[`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html).
+See `?SpaDES.core::times()`.
+
+::: {.callout-tip}
+## Time in `SpaDES`
+It is useful to understand `time` in SpaDES. Time has units (e.g., "year") which
+is defined by the modules metadata `timeunit`. So, if `time(sim)` is `1` or `2024`,
+that would be in `year` units, if the module is in `year`. To know what "time" it is
+in a module, the easiest function is `time(sim)`. That will give you the "time". 
+
+Time, in SpaDES, is a way of ordering events. If one event happens at time 2024,
+and another event happens at 2025, then the 2024 event will happen first.
+
+The other two useful functions are `start(sim)` and `end(sim)`, which will give
+you the starting time of the `spades` call and ending time respectfully. These
+would have been specified in `simInit`.
+:::
+
 
 ```{r predictionEvent}
 switch(
@@ -237,12 +265,42 @@ switch(
 )
 ```
 
+::: {.callout-tip}
+## Top-down vs Bottom-up workflow sequencing
+
+In a "top-down" workflow, we could imagine something like:
+```{r, eval=FALSE}
+scheduleEvent(sim, time(sim) + 1, "predictions")
+scheduleEvent(sim, time(sim) + 2, "predictions")
+scheduleEvent(sim, time(sim) + 3, "predictions")
+```
+This would schedule 3 *predictions*, during the next three "time steps". This may be 
+very clear, but it would be difficult to do this for dozens of years (could be done
+with a for-loop).
+
+A "bottom up" approach is to schedule the *predictions* event once, then each time
+that *predictions* event occurs, reschedule it.
+
+```{r,eval=FALSE}
+init = {
+  scheduleEvent(sim, time(sim), "predictions")
+}
+
+predictions = {
+  scheduleEvent(sim, time(sim) + 1, "predictions")
+}
+```
+Each time the *predictions* event happens, it will reschedule itself forever! Very simple.
+The workflow sequence emerges from the self-scheduling.
+:::
+
+
 ### Double check existing events
 
 If we ran the above changes, we would see an error because `plotFn` is,
 by default, scheduled to run at the time that is specified by
 `.plotInitialTime`, which by default is `start(sim)`. We have no data
-yet at that time. So, we have to schedule `plotFn` to run at `end(sim)`:
+yet at that time. So, we will choose to schedule `plotFn` to run at `end(sim)`:
 
 ```{r}
 scheduleEvent(sim, end(sim), "scheduling", "plot")
@@ -250,7 +308,7 @@ scheduleEvent(sim, end(sim), "scheduling", "plot")
 
 ### Update module metadata
 
-Like in @sec-moduleintro, we have to update the module metadata... what
+Like in @sec-moduleFilesAndMetadata, we have to update the module metadata... what
 the inputs, outputs, parameters *are*. `SpaDES` will not error if the
 metadata are not correct, but it will try to point out the problems.
 
