--- a/training/simList.qmd
+++ b/training/simList.qmd
@@ -3,6 +3,12 @@ author      : "Eliot McIntire"
 date        : last-modified
 editor_options:
   chunk_output_type: console
+execute:
+  eval: false
+  tidy: false
+  warning: false
+  message: false
+  error: false
 ---
 
 ```{r setup, include=FALSE}
@@ -45,12 +51,43 @@ sim$b
 envir(sim)
 ```
 
+
+::: {.callout-tip}
+## `simList` is an `environment`
+
+The name `simList` has the word "list" in it, but it is actually an `environment`
+```{r,eval=FALSE}
+sim <- simInit()
+is(sim, "environment")
+# [1] TRUE
+```
+:::
+
+
+::: {.callout-tip}
+## `simNew <- sim` doesn't copy
+If you don't know what an `environment` is in `R`, it is OK. The most important
+feature of an `environment` is that is it `pass-by-reference`, which means it is
+not copied when it is "assigned" somewhere. This makes `SpaDES` fast enough to use
+for huge workflows.
+
+```{r,eval=FALSE}
+sim <- simInit()
+sim$a <- 1
+simNew <- sim
+simNew$a <- 2
+
+# what value will this have?
+sim$a
+```
+
+:::
 ## Where does `simList` come from?
 
-There are 2 main ways in `SpaDES.core` to create a `simList`:
+There is only 1 way in `SpaDES.core` to create a `simList`:
 
-1.  using [`simInit()`](https://rdrr.io/cran/SpaDES.core/man/simInit.html) creates a `simList` object.
-2.  using [`spades()`](https://rdrr.io/cran/SpaDES.core/man/spades.html) , which returns a modified `simList` object.
+- using [`simInit()`](https://rdrr.io/cran/SpaDES.core/man/simInit.html)
+    creates a `simList` object.
 
 ## How can we specify a `simList`?
 
@@ -77,7 +114,8 @@ str(emptySim)
 **NOTE:** `simList`s are S4 objects, so we can use `getSlots()` and
 `slotNames()` to examine the object.
 
-See also [`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
+See also
+[`?'.simList-class'`](https://rdrr.io/cran/SpaDES.core/man/simList-class.html)
 
 ## Accessing the parts of a simLists
 
@@ -146,6 +184,12 @@ Use the `simList` accessor functions to determine the following:
 8.  the file paths used for simulation inputs and outputs.
 
 ```{r inspect-simList, eval=FALSE}
+# Get the sample modules that come with SpaDES.core
+library(SpaDES.core)
+modulePath <- SpaDES.core::getSampleModules(tempdir())
+# options(spades.loadReqdPkgs = FALSE) # we don't need to check for packages in this example
+mySim <- simInit(modules = dir(modulePath[1:3]), paths = list(modulePath = modulePath))
+
 # list modules used in the simulation
 modules(mySim)
 
